<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MakeMyScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="button_setscreen">Preview</string>
    <string name="label_background">Background</string>
    <string name="label_text">Text/Quote</string>
	<string name="label_author">Author</string>
    <string name="hint_author">Optional</string>
     <string name="share_the_wallpaper">Share</string>
    <string name="sample_quote">We’ve all chosen to do this with our lives. So it better be damn good. It better be worth it.</string>
    <string name="sample_author">Steve Jobs </string>
    <string name="choose_a_text_color">Choose a text color</string>
    <string name="pick_a_photo">Pick a photo</string>
    <string name="pick_a_color">Pick a color</string>
    <string name="button_label">OK</string>
    <string name="set_wallpaper">Set wallpaper</string>
    <string name="preview_wallpaper">Preview wallpaper</string>
    <string name="save_wallpaper">Save wallpaper</string>
    <string name="photo_picker">Photo Picker</string>
    <string name="color_picker">Color Picker</string>
    <string name="text_color">Text Color</string>
</resources>
